[package]
name = "conductor"
version = "0.3.2"
authors = ["Joe Bellus <joe@5sigma.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="conductor"
path="src/lib/mod.rs"


[dependencies]
git2 = "0.13.8"
clap = "2.33.0"
ansi_term = "0.12"
serde = { version = "1.0.114", features = ["derive"] }
serde_yaml = "0.8"
# os_pipe = "0.9.2"
subprocess = "0.2.4"
# duct = "0.13.4"
expand_str = "0.1.1"
ctrlc = {version = "3.1.6"}
log = "0.4.11"
crossbeam = "0.7.3"
simple_logger = "1.6.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
rs-docker = "0.0.58"
# timeout-readwrite = "0.1"