[package]
name = "conductor"
version = "0.4.0"
authors = ["Joe Bellus <joe@5sigma.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="conductor"
path="src/lib/mod.rs"


[dependencies]
git2 = "0.13.8"
clap = "2.33.0"
ansi_term = "0.12"
serde = { version = "1.0.114", features = ["derive"] }
serde_yaml = "0.8"
subprocess = "0.2.4"
expand_str = "0.1.1"
ctrlc = {version = "3.1.6"}
log = "0.4.11"
crossbeam = "0.7.3"
simple_logger = "1.6.0"
rs-docker = "0.0.58"